# ZKAuditCore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  project description.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: methodology.md  next_iteration_issues.md  release_notes_v0.1.0-mvp.md
fixtures/circuits/: vulnerable_ctf_like.json  vulnerable_sample.json  vulnerable_tornado_like.json
scripts/: demo.ps1
src/zk_auditcore/: __init__.py
src/zk_auditcore/attestation/: __init__.py  manifest.py
src/zk_auditcore/cli/: main.py
src/zk_auditcore/coverage/: __init__.py  calculator.py
src/zk_auditcore/ir/: __init__.py  graph.py  models.py
src/zk_auditcore/parsers/: circom.py
src/zk_auditcore/pipeline/: run.py
src/zk_auditcore/reporting/: __init__.py  exporters.py  schema.py
src/zk_auditcore/rules/: __init__.py  core.py  engine.py
src/zk_auditcore/solver/: __init__.py  z3_engine.py
tests/: test_pipeline.py
